objects/copado__Static_Code_Analysis_Settings__c.object
<CustomObject>
    <fields>
        <fullName>copado__Cloud_Organization__c</fullName>
        <description>You can get this Organization Id in CodeScan Cloud, under your profile, in the &quot;My Organizations&quot; setup menu.</description>
        <inlineHelpText>You can get this Organization Id in CodeScan Cloud, under your profile, in the &quot;My Organizations&quot; setup menu.</inlineHelpText>
        <label>Cloud Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__CodeScan_Token__c</fullName>
        <label>CodeScan Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__CodeScan_URL__c</fullName>
        <label>CodeScan URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__CodeScan_Version__c</fullName>
        <inlineHelpText>Cloud version requires a CodeScan Cloud license.
On-premise SonarQube requires your SonarQube instance to be accesible through internet.</inlineHelpText>
        <label>CodeScan Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>On-premise SonarQube</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__ReportIssuesFromLatestCommit__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Report Issues From Latest Commit</label>
        <type>Checkbox</type>
    </fields>
    <label>Static Code Analysis Settings</label>
    <nameField>
        <label>Static Code Analysis Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Static Code Analysis Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>